--- a/dev/choice_return_product/all.styl
+++ b/dev/choice_return_product/all.styl
@@ -256,6 +256,12 @@ tr.have_comment
     
     .warning_bold
         font-weight: 500
+    
+    .warning_wrapper
+        font-size: 13px;
+        display: flex;
+        flex-direction: column;
+        display: none
 
 /**/
 .radio_button_wrapper
@@ -293,6 +299,9 @@ tr.have_comment
     
         .sum_warning
             font-size: 12px
-
+        
+        .warning_wrapper
+            display: block
+            
     .dialog_button_wrapper
         margin-bottom: 40px
