1.修正order_detail page 取消明細 RWD寬度錯誤問題 2.修正login_first_buy page RWD 無法滑動與被header擋住問題 3.修正product module size to RWD correct in 375px width device 4.修正member_section silde_bar RWD font-size

--- a/dev/_general/product/product.styl
+++ b/dev/_general/product/product.styl
@@ -50,7 +50,9 @@ $product_name_lineHeight = 18px
     &:hover .icon_wrapper
         opacity: 1
     img
-        absolute: 0
+        //absolute: 0
+        position: absolute
+        top: 0
         z-index: -1
         width: 100%;
 
@@ -105,13 +107,16 @@ $product_name_lineHeight = 18px
 +media-query( only screen ,max-width $tablet_rwd_width )
     .product_wrapper
         max-width:172px
-    
+        max-width: 164px;
+
         .tag
             size: 34px
 
     .product_img_wrapper
         size: 172px 180px
-    
+        size: 164px 173px;
+        position: relative;
+
     .product_info,.tag
         font-size: 12px
     
