--- a/dev/login_first_buy/all.styl
+++ b/dev/login_first_buy/all.styl
@@ -64,6 +64,7 @@ $button_and_input_width = 289px
     .section_wrapper
         flex-direction: column-reverse;
         width: initial
+        margin: 30px 0
     
     .slogan_wrapper
         display: flex
