--- a/dev/order_query/index.jade
+++ b/dev/order_query/index.jade
@@ -89,7 +89,7 @@ block member_section
                     td(data-th='')
                         button.do_button.empty_button null
     div.do_button_dialog#cancel_order_dialog
-        img(src="./img/delete.png").colse_dialog
+        img(src="../general/img/delete.png").colse_dialog
         h1 取消訂單
         p 我們很遺憾您要取消訂單，為了提升網站與商品整體品質，請您填寫此次取消訂單的原因(必填)。
         
@@ -130,7 +130,7 @@ block member_section
             button.dialog_button.dialog_check 確定
 
     div.do_button_dialog#apply_return_dialog
-        img(src="./img/delete.png").colse_dialog
+        img(src="../general/img/delete.png").colse_dialog
         h1 申請退貨
         p 申請退貨前請先詳細閱讀退貨須知
         
