Fix some layout problem
1. Fix logout popout layout error
2. Fix account layout error

--- a/dev/account_setting/index.jade
+++ b/dev/account_setting/index.jade
@@ -31,7 +31,7 @@ block member_section
                         input(type="tel" value="0932332333" disabled).input_edit
                 tr
                     td.td_key 聯絡地址：
-                    td.td_value
+                    td.td_value.input_address
                         //span#regin_id.edit_disappear 106
                         span#city_name.edit_disappear 台北市
                         span#region_name.edit_disappear 大安區
