--- a/dev/order_query/all.styl
+++ b/dev/order_query/all.styl
@@ -145,6 +145,7 @@
             
         .cancel_reason
             width: 100%
+            resize: none;
 
     #apply_return_dialog
         .user_should_know,.radio_button_wrapper
