--- a/dev/account_setting/all.styl
+++ b/dev/account_setting/all.styl
@@ -38,6 +38,13 @@
             border: 1px solid #4a4a4a
             padding-left: 10px;
 
+    .input_address
+        display: flex
+        align-items: center
+
+        input[type="text"]
+            flex: 1
+
 .select_wrapper
     size: 211px 25px
     display: flex
@@ -94,6 +101,7 @@
         padding-left: 20px
 
         +placeholder()
+            background: #FFFFFF;
             color: #4A4A4A
             font-size: 14px
 
