Complete 2 page and fix account_setting page error
1. New shopping_should_know page
2.New about page
3.fixed account_setting page layout and js error

--- a/dev/_general/member_section/member_section.styl
+++ b/dev/_general/member_section/member_section.styl
@@ -14,6 +14,10 @@
     width: 100%;
     max-width: $banner_max_width
 
++media-query( all, max-width $phone_rwd_width )
+    .page_link>img
+        height: 100px
+        
 .two_col
     display: flex
     width: 100%;
