--- a/dev/account_setting/all.styl
+++ b/dev/account_setting/all.styl
@@ -33,6 +33,11 @@
 
             &:disabled
                 color: #4a4a4a
+                background: white
+                
+        input[disabled]
+            color: #4a4a4a
+            background: white
 
         .input_edit_now
             border: 1px solid #4a4a4a
