--- a/dev/account_setting/all.styl
+++ b/dev/account_setting/all.styl
@@ -26,22 +26,17 @@
         position: relative;
 
         input
-            border: none
+            border: 1px solid #4a4a4a
             font-weight:inherit
             size: 211px 25px
             box-sizing: border-box;
-
-            &:disabled
-                color: #4a4a4a
-                background: white
-                
+            padding-left: 10px;
+            
         input[disabled]
             color: #4a4a4a
             background: white
-
-        .input_edit_now
-            border: 1px solid #4a4a4a
-            padding-left: 10px;
+            border: none
+            padding-left: 0
 
     .input_address
         display: flex
