Fix shopping_should_knowlayout problem
To layout  .expand_state  left 10px~

--- a/dev/_general/dialog/dialog.styl
+++ b/dev/_general/dialog/dialog.styl
@@ -12,7 +12,7 @@
     color: #4A4A4A
     text-align: center
     z-index: 10;
-    
+    transition: all 0.4 ease-in-out
     .colse_dialog
         position: absolute
         top: 14px;
