--- a/dev/shopping_should_know/all.styl
+++ b/dev/shopping_should_know/all.styl
@@ -17,6 +17,7 @@
         margin-right: 10px
         size 13px
         background-image: url("./img/-.png");
+        margin-left: 10px;
 .qa_title_active
     color:#4a4a4a
 
