--- a/dev/account_setting/index.jade
+++ b/dev/account_setting/index.jade
@@ -102,3 +102,6 @@ block member_section
 
             span.dialog_button_wrapper
                 button.dialog_button.dialog_check 確定
+        
+        div.do_button_dialog#modify_success_dialog
+            h1 個人資料成功修改
