--- a/dev/product_intro/all.styl
+++ b/dev/product_intro/all.styl
@@ -95,19 +95,22 @@ $product_big_photo_rwd_height = 318px
         size: 39px
         margin-right: 15px
 
-.buttons>*
+#product_num,#add_shopping_cart,#add_favorite
     background: #F6EAE6
     color: $pink_medium
-    display: flex
-    flex-axis: center
     height: 50px
     margin-right: 3px
 
+#add_favorite
+    display: flex
+    flex-axis: center
+
 #product_num
     width: 64px
-    padding: 13px
-    padding-left: 21px
     box-sizing: border-box
+    text-align: center;
+    padding-right: 16px;
+
 #add_shopping_cart
     width: 266px
     border: none
@@ -251,7 +254,10 @@ input[type="number"]::-webkit-inner-spin-button {
     .color_img_list>img
         size: 20px
         margin-right: 10px
-
+    
+    #product_num
+        padding: 0
+        
     #add_shopping_cart
         width: initial
         flex: 1
