About page text justify to fill width 100%
About page text justify to fill width 100%

--- a/dev/about/all.styl
+++ b/dev/about/all.styl
@@ -24,13 +24,15 @@
     width: 50vw;
     max-width: 722px;
     padding-top: 20px
-
+    img
+        width: 100%;
     p
         margin: 20px 0 92px;
         font-size: 18px;
         color: #4A4A4A;
         letter-spacing: 0.47px;
         line-height: 1.5;
+        text-align: justify;
 
 
 +media-query( all, max-width $phone_rwd_width )
@@ -45,8 +47,7 @@
 
     .content
         width: 100%
-        img
-            width: 100%
+        
         p
             font-size: 15px;
             letter-spacing: 0.39px;
