--- a/dev/account_setting/all.styl
+++ b/dev/account_setting/all.styl
@@ -37,6 +37,7 @@
             color: #4a4a4a
             background: white
             border: none
+            opacity: 0
             padding-left: 0
 
     .input_address
