--- a/dev/product_intro/all.styl
+++ b/dev/product_intro/all.styl
@@ -95,7 +95,45 @@ $product_big_photo_rwd_height = 318px
         size: 39px
         margin-right: 15px
 
-#product_num,#add_shopping_cart,#add_favorite
+.number_section
+    width: 64px;
+    box-sizing: border-box;
+    text-align: center;
+    padding-right: 16px;
+    //display: flex;
+    justify-content: center;
+    //align-items: center;
+    font-weight: 400;
+    position: relative;
+
+    .num_arrow
+        width: 16px;
+        background: #F2DFD7;
+        height: 50%;
+        position: absolute;
+        right: 0;
+        justify-content: center;
+        cursor: pointer;
+        font-size-adjust: initial;
+
+        .desktop,.rwd
+            color: #D6645F;
+            font-size: x-small;
+            transform: scale(0.6);
+
+            &::selection
+                background: inherit
+        
+        .rwd
+            display: none
+        
+    .num_arrow_left
+        top: 0
+    .num_arrow_right
+        bottom: 0
+
+//#product_num,
+#add_shopping_cart,#add_favorite,.number_section
     background: #F6EAE6
     color: $pink_medium
     height: 50px
@@ -105,11 +143,11 @@ $product_big_photo_rwd_height = 318px
     display: flex
     flex-axis: center
 
-#product_num
-    width: 64px
-    box-sizing: border-box
-    text-align: center;
-    padding-right: 16px;
+// #product_num
+//     width: 64px
+//     box-sizing: border-box
+//     text-align: center;
+//     padding-right: 16px;
 
 #add_shopping_cart
     width: 266px
@@ -227,6 +265,27 @@ input[type="number"]::-webkit-inner-spin-button {
     #main
         padding: 0 20px;
     
+    .number_section
+        width: 109px;
+        padding: 0;
+        flex-direction: row-reverse
+
+        .number_content
+            display: flex
+            justify-content: center
+            width: 49px
+
+        .num_arrow
+            position: initial;
+            width: 30px;
+            height: 100%;
+
+            .desktop
+                display: none
+            
+            .rwd
+                display: block
+
     #product_photo
         size: 277px $product_big_photo_rwd_height
         margin-left: 7px
@@ -255,8 +314,8 @@ input[type="number"]::-webkit-inner-spin-button {
         size: 20px
         margin-right: 10px
     
-    #product_num
-        padding: 0
+    // #product_num
+    //     padding: 0
         
     #add_shopping_cart
         width: initial
