--- a/dev/product_intro/index.jade
+++ b/dev/product_intro/index.jade
@@ -45,7 +45,16 @@ block content
                     span SALE
                     span.true_price $ 200
                 div.buttons
-                    input(type="number" value="1" min="1" max="5")#product_num
+                    //-input(type="number" value="1" min="1" max="5")#product_num
+                    div.number_section
+                        .num_arrow.num_arrow_left
+                            .desktop ▲
+                            .rwd ▶
+                        .number_content(min="1" max="5") 1
+                        .num_arrow.num_arrow_right
+                            .desktop ▼
+                            .rwd ◀
+
                     button#add_shopping_cart 添加到購物車
                     div#add_favorite
                         i.fa.fa-heart-o(aria-hidden="true")
