--- a/dev/product_intro/index.jade
+++ b/dev/product_intro/index.jade
@@ -48,12 +48,10 @@ block content
                     //-input(type="number" value="1" min="1" max="5")#product_num
                     div.number_section
                         .num_arrow.num_arrow_left
-                            .desktop ▲
-                            .rwd ►
+                            .arrow_icon ▲
                         .number_content(min="1" max="5") 1
                         .num_arrow.num_arrow_right
-                            .desktop ▼
-                            .rwd ◄
+                            .arrow_icon ▼
 
                     button#add_shopping_cart 添加到購物車
                     div#add_favorite
