Header finish half
finish Header effect and layout of desktop

--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -6,8 +6,8 @@ header#header.isRWD
     nav.nav_list_wrapper
         img(alt="Embedded Image" src=logoImgBase64)#logo_img
         
-        ul.parent_category_list.rwd_disapper
-            li 限時優惠
+        ul.parent_category_list
+            li.rwd_disapper 限時優惠
                 div.child_category_wrapper
                     ul.child_category_list
                         li 
@@ -18,16 +18,7 @@ header#header.isRWD
                             a(href="") 歡慶母親節·美體保養消費滿1500元現折500元
                     img(src="../general/img/pic1.png")
                     
-            li 最新商品
-            li 熱門商品
-            li 美甲彩繪
-                
-            li 時尚彩妝
-            li 美體保養
-                
-            li 香氛香氣
-                
-            li 更多品項
+            li.rwd_disapper 最新商品
                 div.child_category_wrapper
                     ul.child_category_list
                         li 
@@ -36,6 +27,46 @@ header#header.isRWD
                             a(href="") Dear Mia系列產品消費滿2,000元現折200元
                         li 
                             a(href="") 歡慶母親節·美體保養消費滿1500元現折500元
+                    img(src="../general/img/pic1.png")
+            li.rwd_disapper 熱門商品
+            li.rwd_disapper 美甲彩繪
+                
+            li.rwd_disapper 時尚彩妝
+            li.rwd_disapper 美體保養
+                
+            li.rwd_disapper 香氛香氣
+                
+            li.more_option_wrapper 更多品項
+                div.child_category_wrapper.more_option
+                    ul.child_category_list
+                        li 護膚保養
+                            ol.more_option_child_wrapper
+                                li 
+                                    a(href="") C&CHAT 幻彩系指油貼任選兩件500元
+                                li 
+                                    a(href="") Dear Mia系列產品消費滿2,000元現折200元
+                                li 
+                                    a(href="") 歡慶母親節·美體保養消費滿1500元現折500元
+                        li 酷炫指甲
+                            ol.more_option_child_wrapper
+                                li 
+                                    a(href="") C&CHAT 幻彩系指油貼任選兩件500元
+                                li 
+                                    a(href="") Dear Mia系列產品消費滿2,000元現折200元
+                                li 
+                                    a(href="") 歡慶母親節·美體保養消費滿1500元現折500元
+                        li 光凝膠
+                        li 指甲貼片
+                        li 指甲保養
+                        li 卸甲商品
+                        li 天下無敵
+                            ol.more_option_child_wrapper
+                                li 
+                                    a(href="") XXXXXXX
+                                li 
+                                    a(href="") YYYYYYYY
+                                li 
+                                    a(href="") ZZZZZZZ
                     img(src="../general/img/pic1.png")
                 
         div.nav_btns_wrapper
