Test header hamburger bar can't see on iPhone
Modify header to test!!!!

--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -115,7 +115,7 @@ header#header.isRWD
                         input(type="text" placeholder="Search...")#search_input
                         input(type="submit" value="GO")#search_go
 
-                a(href="#")
+                span
                     i.fa.fa-shopping-cart(aria-hidden='true')
                 
                 | <i class="rwd_show">|</i>
