--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -126,13 +126,27 @@ rwd_header()
     .nav_btns.right &
         /*因為nav icon高度都不同，所以排列不整齊，導致margin會有些許差距需要特別設定*/
         margin-top: (34px + 2)
+
+.dropdown_block_active
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0px);
+
+form.dropdown_block:after
+    content: "";
+    width: calc("100% - 20px");
+    height: 1px;
+    background: #d6645f;
+    position: absolute;
+    bottom: 10px;
+
 #bars
     width: 18px;
 .bars_rwd
     display: none
     
 #search_input
-    border-bottom: 1px solid $pink_medium
+    //border-bottom: 1px solid $pink_medium
     height: ($search_component_height - 3)
     flex: 1;
 
@@ -143,7 +157,7 @@ rwd_header()
 #search_go
     size: 45px $search_component_height
     background: $pink_medium
-    border: 1px solid $pink_medium
+    //border: 1px solid $pink_medium
     color: white
     cursor: pointer
     box-sizing: border-box
@@ -373,10 +387,10 @@ rwd_header()
         
     
 .mobile_menu_active
-    display: flex
-    transform: translateY(0);
-    visibility: visible
-    opacity: 1
+    display: flex !important
+    transform: translateY(0) !important
+    visibility: visible !important
+    opacity: 1 !important
 
 //+media-query( only screen ,max-width 900px )
 
@@ -448,6 +462,9 @@ rwd_header()
             display none
     .rwd950
         display: list-item
+    form.dropdown_block:after
+        width: calc("100% - 50px");
+        bottom: 12px;
 
     .scroll_header
         rwd_header()
@@ -474,6 +491,18 @@ rwd_header()
             display: initial
     #main
         margin-top: $header_rwd_height
+    
+    .nav_btns i
+        font-size: 23px
+
+        //.small_font
+    i.fa.fa-user-circle-o.small_icon
+        font-size: 22px;
+        padding-top: 11px;
+
+    #search_button:before
+        font-size: 20px;
+
 
     .bars_rwd
         display: inline-block;
@@ -492,6 +521,7 @@ rwd_header()
 
         &:before
             display: none
-
+    ul.dropdown_block>li
+        margin: 0 5px
     .mobile_menu
         display: flex
