--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -134,7 +134,8 @@ rwd_header()
 
 form.dropdown_block:after
     content: "";
-    width: calc("100% - 20px");
+    left: 10px;
+    right: 10px;
     height: 1px;
     background: #d6645f;
     position: absolute;
@@ -161,7 +162,7 @@ form.dropdown_block:after
     color: white
     cursor: pointer
     box-sizing: border-box
-
+    border-radius: 0
     &:active
         background: white
         color: $pink_medium
@@ -327,6 +328,7 @@ form.dropdown_block:after
 .mobile_menu
     position: fixed;
     top: 67px;
+    left: 0px;
     width: 100%;
     background: white;
     box-shadow: 0 1px 0 0 rgba(0,0,0,0.26);
@@ -371,7 +373,7 @@ form.dropdown_block:after
     
     .second_layer
         padding-left: 20px
-        flex: 1;
+        flex: 1
         &>span
             display: none
         .active
@@ -387,10 +389,10 @@ form.dropdown_block:after
         
     
 .mobile_menu_active
-    display: flex !important
-    transform: translateY(0) !important
-    visibility: visible !important
-    opacity: 1 !important
+    display: flex
+    transform: translateY(0)
+    visibility: visible
+    opacity: 1
 
 //+media-query( only screen ,max-width 900px )
 
@@ -463,7 +465,8 @@ form.dropdown_block:after
     .rwd950
         display: list-item
     form.dropdown_block:after
-        width: calc("100% - 50px");
+        left: 25px;
+        right: 25px;
         bottom: 12px;
 
     .scroll_header
@@ -506,11 +509,6 @@ form.dropdown_block:after
 
     .bars_rwd
         display: inline-block;
-    
-    .search_rwd
-        visibility: visible
-        opacity: 1
-        transform: translate(0)
 
     .dropdown_block
         width: 100%;
