Update header icon font-size
More bigger than previous version

--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -118,7 +118,7 @@ header#header.isRWD
                 span
                     i.fa.fa-shopping-cart(aria-hidden='true')
                 
-                | <i class="rwd_show">|</i>
+                | <i class="rwd_show" id="header_split_line">|</i>
 
                 i#bars.bars_rwd.fa.fa-bars(aria-hidden="true")
 
