--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -496,17 +496,25 @@ form.dropdown_block:after
         margin-top: $header_rwd_height
     
     .nav_btns i
-        font-size: 23px
+        font-size: 25px
 
         //.small_font
     i.fa.fa-user-circle-o.small_icon
-        font-size: 22px;
-        padding-top: 11px;
+        font-size: 26px;
+        padding-top: 4px;
+        position: relative;
+        top: 5px;
+        left: -3px;
 
     #search_button:before
-        font-size: 20px;
+        font-size: 24px;
 
-
+    #header_split_line
+        width: 1px; */
+        height: 100%;
+        font-weight: 100;
+        transform: scale(1.2);
+        display: inline-block;
     .bars_rwd
         display: inline-block;
 
