--- a/dev/_general/product/product.styl
+++ b/dev/_general/product/product.styl
@@ -107,14 +107,16 @@ $product_name_lineHeight = 18px
 +media-query( only screen ,max-width $tablet_rwd_width )
     .product_wrapper
         max-width:172px
-        max-width: 164px;
+        max-width:168px
+        width:168px
+        //max-width: 164px;
 
         .tag
             size: 34px
 
     .product_img_wrapper
         size: 172px 180px
-        size: 164px 173px;
+        size: 168px 177px;
         position: relative;
 
     .product_info,.tag
