--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -118,26 +118,24 @@ header#header.isRWD
                 span.dropdown_block_wrapper
                     i.fa.fa-shopping-cart(aria-hidden='true')
                     #shopping_cart.dropdown_block
-                        .shopping_cart_product
-                            div.product_wrapper
-                                img(src="../general/img/shopping_cart_delete.png").remove_product
-                                .product_info_wrapper
-                                    .product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
-                                    .product_info
-                                        .color 顏色：紅色
-                                        .number 數量： 1
-                                    .product_price $ 580
+                        .shopping_cart_product                            
+                            img(src="../general/img/shopping_cart_delete.png").remove_product
+                            .product_info_wrapper
+                                .product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
+                                .product_info
+                                    .color 顏色：紅色
+                                    .number 數量： 1
+                                .product_price $ 580
                             img(src="../general/img/商品圖_cart.png").product_img
                         
-                        .shopping_cart_product
-                            div.product_wrapper
-                                img(src="../general/img/shopping_cart_delete.png").remove_product
-                                .product_info_wrapper
-                                    .product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
-                                    .product_info
-                                        .color 顏色：紅色
-                                        .number 數量： 1
-                                    .product_price $ 580
+                        .shopping_cart_product                            
+                            img(src="../general/img/shopping_cart_delete.png").remove_product
+                            .product_info_wrapper
+                                .product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
+                                .product_info
+                                    .color 顏色：紅色
+                                    .number 數量： 1
+                                .product_price $ 580
                             img(src="../general/img/商品圖_cart.png").product_img
                         
                         .shopping_cart_calc
@@ -147,8 +145,7 @@ header#header.isRWD
                         a(href="#").go_to_pay 前往結帳
 
 
-                
-                | <i class="rwd_show" id="header_split_line">|</i>
+                i.rwd_show#header_split_line
 
                 i#bars.bars_rwd.fa.fa-bars(aria-hidden="true")
 
