--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -105,7 +105,11 @@ rwd_header()
     white-space: nowrap
     margin-top: 34px
     height: 40px
-    show_dropdown_animation(".dropdown_block_wrapper>i:hover + &")
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(20px)
+    transition: visibility 0.15s linear, opacity 0.3s ease, transform 0.3s ease;
+    //show_dropdown_animation(".dropdown_block_wrapper>i:hover + &")
 
     >li
         margin: 0 10px
@@ -126,11 +130,6 @@ rwd_header()
     .nav_btns.right &
         /*因為nav icon高度都不同，所以排列不整齊，導致margin會有些許差距需要特別設定*/
         margin-top: (34px + 2)
-
-.dropdown_block_active
-    visibility: visible;
-    opacity: 1;
-    transform: translateY(0px);
 
 form.dropdown_block:after
     content: "";
@@ -168,15 +167,14 @@ form.dropdown_block:after
         min-height: 82px
         border-bottom: 1px solid #C3C2C3
         box-sizing: border-box
-        .product_wrapper
-            display: flex
-            align-items: center;
+        
         .remove_product
             size : 13px
             margin-right: 30px;
             cursor: pointer
 
     .product_info_wrapper
+        flex: 1
         display: flex
         flex-direction: column
 
@@ -219,9 +217,16 @@ form.dropdown_block:after
         margin-top: 15px
     
 .scroll_header
-    #shopping_cart       
+    #shopping_cart
         top: 9px;
         right: 0;
+
+.dropdown_will_attach_right
+    #shopping_cart
+        position: fixed;
+        right: 0;
+        top: 9px;
+
 #bars
     width: 18px;
 .bars_rwd
@@ -289,8 +294,12 @@ form.dropdown_block:after
     z-index: 10
     margin-top: 10px
     white-space: nowrap
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(20px)
+    transition: visibility 0.15s linear, opacity 0.3s ease, transform 0.3s ease;
     /*show*/
-    show_dropdown_animation(".parent_category_list>li:hover  &")
+    //show_dropdown_animation(".parent_category_list>li:hover  &")
     
     .child_category_list
         padding-left: 10px
@@ -307,6 +316,16 @@ form.dropdown_block:after
                 color: $pink_medium
     img
         height: 170px
+
+.dropdown_block_active
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0px);
+
+    &:before
+        border-top-width: 7px
+        transform: translateY(0)
+        transition: transform 0.15s linear 0.3s,border-top-width 0.15s linear 0.3s
 
 .more_option
     min-height: 220px
@@ -584,20 +603,30 @@ form.dropdown_block:after
         font-size: 26px;
         padding-top: 4px;
         position: relative;
-        top: 5px;
+        top: 6px;
         left: -3px;
 
     #search_button:before
         font-size: 24px;
 
     #header_split_line
-        width: 1px; */
-        height: 100%;
+        width: 1px;
         font-weight: 100;
-        transform: scale(1.2);
+    
         display: inline-block;
+        background: #d5948e;
+        height: 27px;
+        margin: 0 10px;
+
     .bars_rwd
         display: inline-block;
+    
+    .nav_btns.right
+        display: flex;
+        align-items: center;
+    
+    .dropdown_block_wrapper>i.fa
+        padding-bottom: 0;
 
     .dropdown_block
         width: 100%;
