--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -599,12 +599,15 @@ form.dropdown_block:after
         font-size: 25px
 
         //.small_font
-    i.fa.fa-user-circle-o.small_icon
+    i.fa.fa-user-circle-o
         font-size: 24px;
         padding-top: 4px;
         position: relative;
-        top: 6px;
+        top: 5px;
         left: -3px;
+    
+    i.fa.fa-shopping-cart
+        margin-top: 1px;
 
     #search_button:before
         font-size: 23px;
