Change some style and architecture
fix Product_intro page - the specification part can be change line
Remove general.js content to reduce the couplin

--- a/dev/_general/temp_page.jade
+++ b/dev/_general/temp_page.jade
@@ -12,7 +12,8 @@ html
         //-should load after all.css
         
         
-        script(src='../general/jquery-3.2.0.min.js')
+        script(src='../general/js/jquery-3.2.0.min.js')
+        script(src='../general/js/header.js')
         script(src='bundle.js')
         
         block js
