--- a/dev/product_intro/all.styl
+++ b/dev/product_intro/all.styl
@@ -198,10 +198,12 @@ input[type="number"]::-webkit-inner-spin-button {
     color: #8E5651
     font-size: 16px
     letter-spacing: 0.42px;
-    padding: 30px 100px
+    padding: 30px 100px 20px
+    //padding bottom 20px is beacause .specification>.value>span
     box-sizing: border-box
     margin: 40px 0
     flex-direction: column
+    white-space: nowrap
 
     &>div
         margin-bottom: 17px
@@ -211,6 +213,13 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .value
     margin-right: 5px
+    display: flex
+    flex-wrap: wrap
+    &>span
+        margin-right: 36px
+
+.specification>.value>span
+    margin-bottom: 10px;
 
 .product_histroy
     margin-bottom: 100px
@@ -223,9 +232,10 @@ input[type="number"]::-webkit-inner-spin-button {
         height: 0
         border-top: 1px solid #D6645F
         width: 100%
+        margin: 10px 0 20px
     &>div
         display: flex
-        justify-content: space-around
+        justify-content: space-between
         align-items: center;
         flex-wrap: wrap
 
