--- a/dev/product_intro/index.jade
+++ b/dev/product_intro/index.jade
@@ -62,7 +62,7 @@ block content
             span.key 商品編號 |&nbsp;
             span.value
                 span NP00123456
-        div
+        div.specification
             span.key 商品規格 |&nbsp;
             span.value
                 span 品牌名稱：Dear Mia
